			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.swi.psy.uva.nl/bugzilla/
					--------------------------------------

VERSION 5.3.11 (May 25, 2004)
=============================

  * ADDED: first integration of JPL with the normal Prolog tree.

  * ADDED: [=format] to -dump-runtime-variables to dump them in CMD.EXE
    compatible format.

  * PORT: Added a few NetBSD patches (incomplete, ongoing work).
    Hubert Feyrer.

  * FIXED: cleanup at exit if there are engines not attached to threads.

  * ADDED: Hook prolog:error_message//1 to add new error types and print
    them in readable format.

  * ADDED: plld: add -Wl,* options to the linker options.

  * MODIFIED: Renamed checklist/2 --> maplist/2 for compatibility reasons.
    Added checklist/2 to the compatibility library.

  * ADDED: Maplist/4

  * FIXED: Bug#152: making active dynamic predicates static using
    compile_predicates/1.  Marc Bezem.

  * CLEANUP: some errors reported by the valgrind tool.


VERSION 5.3.10 (Apr 29, 2004)
=============================

  * FIXED: import warning on $derived_source/3.  Mike Elston.

  * FIXED: numbervars option of the write predicates.  Steve Moyle.

  * Provided limited stack trace for errors during GC.

  * FIXED: throw/1 throwing a single variable if the exception is not
    caught (Roberto Bagnara)

  * ADDED: PL_is_ground() to check for term groundness in the foreign
    interface.

  * ENHANCED: error messages produced by load_foreign_library/1.

  * MAINTENANCE: Fixed incorrect assertion in O_SECURE mode.  Barry Evans.

  * ENHANCED: some Makefile cleanup.  Fixed typo spotted by Tom Schrijvers.

  * PORT: Cleanup of autoconf configuration (dropped acconfig.h)

  * ENHANCED: Exploit GCC visibility("hidden") attribute.  Improves symbol
    handling for embedded applications on ELF-based systems.

